--- a/src/Dapperer/Dapperer.csproj
+++ b/src/Dapperer/Dapperer.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ColumnInfo.cs" />
     <Compile Include="DefaultDappererSettings.cs" />
     <Compile Include="IDappererSettings.cs" />
+    <Compile Include="QueryBuilders\ISqlQueryBuilder.cs" />
     <Compile Include="SqlDbFactory.cs" />
     <Compile Include="IDbFactory.cs" />
     <Compile Include="IIdentifier.cs" />
@@ -55,7 +56,7 @@
     <Compile Include="Page.cs" />
     <Compile Include="PagingSql.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueryBuilder.cs" />
+    <Compile Include="QueryBuilders\SqlQueryBuilder.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="StringTableValuedParams.cs" />
     <Compile Include="TableAttribute.cs" />
