--- a/src/Tests/Dapperer.Tests.Unit/Dapperer.Tests.Unit.csproj
+++ b/src/Tests/Dapperer.Tests.Unit/Dapperer.Tests.Unit.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueryBuilderTests.cs" />
+    <Compile Include="SqlQueryBuilderTests.cs" />
     <Compile Include="TestEntityNoTableSpecified.cs" />
     <Compile Include="TestEntityWithAutoIncreamentId.cs" />
     <Compile Include="TestEntityWithExtraFields.cs" />
