--- a/src/Dapperer/Dapperer.csproj
+++ b/src/Dapperer/Dapperer.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Page.cs" />
     <Compile Include="PagingSql.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryBuilders\MsSql\LongTableValuedParams.cs" />
     <Compile Include="QueryBuilders\MsSql\SqlQueryBuilder.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="QueryBuilders\MsSql\StringTableValuedParams.cs" />
