--- a/src/_SolutionItems/Dapperer.nuspec
+++ b/src/_SolutionItems/Dapperer.nuspec
@@ -4,9 +4,8 @@
     <id>Dapperer</id>
     <version>0.0.0.0</version>
     <authors>Joseph Jeganathan</authors>
-    <owners>Bede Gaming Ltd</owners>
+    <owners>Joseph Jeganathan</owners>
     <description>Dapperer an extension for Dapper</description>
-    <copyright>Bede Gaming Ltd 2014</copyright>
     <dependencies>
       <dependency id="Dapper" version="1.34" />
     </dependencies>
