--- a/src/Dapperer/Dapperer.csproj
+++ b/src/Dapperer/Dapperer.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryBuilders\MsSql\LongTableValuedParams.cs" />
     <Compile Include="QueryBuilders\MsSql\SqlQueryBuilder.cs" />
+    <Compile Include="Repository.Async.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="QueryBuilders\MsSql\StringTableValuedParams.cs" />
     <Compile Include="TableAttribute.cs" />
