--- a/src/Dapperer/Dapperer.csproj
+++ b/src/Dapperer/Dapperer.csproj
@@ -1,84 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7A2A3C1D-FC60-4DCA-9692-4CBA76215F6D}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dapperer</RootNamespace>
-    <AssemblyName>Dapperer</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <TargetFrameworks>net451;netstandard2.0</TargetFrameworks>
+    <DebugType>Full</DebugType>
+    <Authors>Joseph Jeganathan;Zhasmina</Authors>
+    <Description>Dapperer an extension for Dapper</Description>
+    <PackageProjectUrl>https://github.com/BedeGaming/Dapperer</PackageProjectUrl>
+    <PackageTags>Dapper</PackageTags>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Dapper, Version=1.39.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Dapper.1.39\lib\net45\Dapper.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Dapper" Version="1.50.5" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ColumnAttribute.cs" />
-    <Compile Include="ColumnInfo.cs" />
-    <Compile Include="DefaultDappererSettings.cs" />
-    <Compile Include="EntityLoader.cs" />
-    <Compile Include="IDappererSettings.cs" />
-    <Compile Include="IQueryBuilder.cs" />
-    <Compile Include="DbFactories\SqlDbFactory.cs" />
-    <Compile Include="IDbFactory.cs" />
-    <Compile Include="IIdentifier.cs" />
-    <Compile Include="IRepository.cs" />
-    <Compile Include="OneToManyEntityLoader.cs" />
-    <Compile Include="OneToOneEntityLoader.cs" />
-    <Compile Include="QueryBuilders\MsSql\IntTableValuedParams.cs" />
-    <Compile Include="ITableInfoBase.cs" />
-    <Compile Include="Page.cs" />
-    <Compile Include="PagingSql.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueryBuilders\MsSql\LongTableValuedParams.cs" />
-    <Compile Include="QueryBuilders\MsSql\SqlQueryBuilder.cs" />
-    <Compile Include="Repository.Async.cs" />
-    <Compile Include="Repository.cs" />
-    <Compile Include="QueryBuilders\MsSql\StringTableValuedParams.cs" />
-    <Compile Include="TableAttribute.cs" />
-    <Compile Include="TableInfo.cs" />
-    <Compile Include="QueryBuilders\MsSql\TableValuedParams.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
