Moving project files to the root of the source

--- a/Dapperer.Tests.Unit/Dapperer.Tests.Unit.csproj
+++ b/Dapperer.Tests.Unit/Dapperer.Tests.Unit.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Dapperer\Dapperer.csproj" />
+    <ProjectReference Include="..\Dapperer\Dapperer.csproj" />
   </ItemGroup>
 
 </Project>
