--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,8 @@ _ReSharper*/
 db/tmp/
 *.cmpuo
 [Ll]ogs/
-src/packages/*
+packages/*
 test/node_modules/*
 *.ncrunch*
 build/temp.sql
-/src/.vs
+/.vs
