--- a/src/_SolutionItems/Dapperer.nuspec
+++ b/src/_SolutionItems/Dapperer.nuspec
@@ -15,7 +15,7 @@
       </group>
       <group targetFramework=".NETStandard2.0">
         <dependency id="Dapper" version="2.0.30" />
-        <dependency id="System.Data.SqlClient" Version="4.7.0" />
+        <dependency id="System.Data.SqlClient" version="4.7.0" />
       </group>
     </dependencies>
   </metadata>
