--- a/src/_SolutionItems/Dapperer.nuspec
+++ b/src/_SolutionItems/Dapperer.nuspec
@@ -16,6 +16,7 @@
       <group targetFramework=".NETStandard2.0">
         <dependency id="Dapper" version="2.0.30" />
         <dependency id="System.Data.SqlClient" version="4.7.0" />
+        <dependency id="System.Configuration.ConfigurationManager" version="4.7.0" />
       </group>
     </dependencies>
   </metadata>
