--- a/src/_SolutionItems/Dapperer.nuspec
+++ b/src/_SolutionItems/Dapperer.nuspec
@@ -10,19 +10,15 @@
     <tags>Dapper</tags>
     <projectUrl>https://github.com/BedeGaming/Dapperer</projectUrl>
     <dependencies>
-      <group targetFramework="net45">
+      <group targetFramework=".NETFramework4.5">
         <dependency id="System.Data.SqlClient" version="4.7.0" />
         <dependency id="Dapper" version="1.39" />
       </group>
-      <group targetFramework="netstandard2.0">
+      <group targetFramework=".NETStandard2.0">
         <dependency id="Dapper" version="2.0.30" />
         <dependency id="System.Data.SqlClient" version="4.7.0" />
         <dependency id="System.Configuration.ConfigurationManager" version="4.6.0" />
       </group>
     </dependencies>
   </metadata>
-  <files>
-    <file src="src\Dapperer\bin\Release\net45\Dapperer.dll" target="lib\net45"/>
-    <file src="src\Dapperer\bin\Release\netstandard2.0\Dapperer.dll" target="lib\netstandard2.0"/>
-  </files>
 </package>
