--- a/src/Dapperer/Dapperer.csproj
+++ b/src/Dapperer/Dapperer.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
     <IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Bede Gaming Ltd</Authors>
@@ -13,12 +13,13 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="Dapper" Version="2.0.30" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.3"/>
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45'">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net46'">
     <Reference Include="System.Configuration" />
     <PackageReference Include="Dapper" Version="1.39.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.3"/>
   </ItemGroup>
 
 </Project>
