--- a/src/Dapperer/Dapperer.csproj
+++ b/src/Dapperer/Dapperer.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Bede Gaming Ltd</Authors>
@@ -11,14 +11,8 @@
     <PackageProjectUrl>https://github.com/BedeGaming/Dapperer</PackageProjectUrl>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.30" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.3"/>
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net46'">
-    <Reference Include="System.Configuration" />
-    <PackageReference Include="Dapper" Version="1.39.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.3"/>
   </ItemGroup>
 
