--- a/.codefresh/pr.yaml
+++ b/.codefresh/pr.yaml
@@ -45,11 +45,9 @@ steps:
     commands:
       - dotnet build --no-restore -c Release -p:Version=${{CF_BUILD_VERSION}}
 
-  # commented out while testing pipeline
-  #
-  # push_nupkgs:
-  #   title: Push nupkgs
-  #   stage: package + release
-  #   image: mcr.microsoft.com/dotnet/sdk:6.0
-  #   commands:
-  #     - dotnet nuget push ${{CF_VOLUME_PATH}}/${{CF_REPO_NAME}}/**/*.nupkg -k ${{secrets.codefresh-secrets.nexus-api-key}} -s http://repos.ad.bedegaming.com:8081/repository/nuget-components/
+  push_nupkgs:
+    title: Push nupkgs
+    stage: package + release
+    image: mcr.microsoft.com/dotnet/sdk:6.0
+    commands:
+      - dotnet nuget push ${{CF_VOLUME_PATH}}/${{CF_REPO_NAME}}/**/*.nupkg -k ${{secrets.codefresh-secrets.nexus-api-key}} -s http://repos.ad.bedegaming.com:8081/repository/nuget-components/
