[Patch] [DX-275] Automated PR: Use CF_REVISION in git-clone step

--- a/.codefresh/pr.yaml
+++ b/.codefresh/pr.yaml
@@ -9,7 +9,7 @@ steps:
     title: Cloning repository
     type: git-clone
     repo: BedeGaming/Dapperer
-    revision: ${{CF_BRANCH}}
+    revision: ${{CF_REVISION}}
     git: github
     stage: setup
 
