--- a/.codefresh/release.yaml
+++ b/.codefresh/release.yaml
@@ -56,4 +56,4 @@ steps:
     stage: package + release
     image: mcr.microsoft.com/dotnet/sdk:6.0
     commands:
-      - dotnet nuget push ${{CF_VOLUME_PATH}}/${{CF_REPO_NAME}}/**/*.nupkg -k ${{NUGET_ORG_API_KEY}} -s https://api.nuget.org/v3/index.json
+      - dotnet nuget push ${{CF_VOLUME_PATH}}/${{CF_REPO_NAME}}/**/*.nupkg -k ${{NUGET_API_KEY}} -s ${{NUGET_REPO}}
